# 201-goormgb-ai

./: .gitignore  README.md  pyproject.toml
.agent/workflows/: run-attack.md  run-defense.md  verify-all.md
.github/workflows/: block-feat-to-main.yml  pr-branch-policy.yml
.handover/: README.md  implementation_plan.md  progress.md  task.md  walkthrough.md
logs/: decision_audit.jsonl  poc_0_decision_audit.jsonl
platform/: README.md
platform/backend/: behavior_bank.jsonl  build.gradle  settings.gradle
platform/frontend/: README.md  package-lock.json  package.json
spec/: policies.json  scenario.schema.json
spec/scenarios/: SCN-01.json  SCN-02.json  SCN-03.json  SCN-04.json  SCN-05.json  SCN-06.json  SCN-07.json  SCN-08.json  SCN-09.json  SCN-10.json  SCN-11.json  SCN-12.json  SCN-13.json  SCN-14.json  SCN-15.json
spec/ssot/: ssot_addendum.yaml  stage1.ssot.yaml  stage2.ssot.yaml  stage3.ssot.yaml  stage4_5.ssot.yaml  stage6.ssot.yaml
src/traffic_master_ai/: __init__.py
tests/: conftest.py  test_logger.py  test_models.py  test_state_store.py  test_transition.py
tests/attack/: test_assertion_engine.py  test_event_registry.py  test_failure.py  test_integration.py  test_integration_failure.py  test_logger.py  test_models.py  test_orchestrator.py  test_policy_loader.py  test_roi.py  test_runtime.py  test_scenario_integration.py  test_scenario_loader.py  test_scenario_runner.py  test_state_store.py  test_transition.py  test_validator.py
tests/defense/: __init__.py  test_brain_logic.py  test_core_engine.py  test_verifier.py
(+183 files in other folders)
