[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traffic-master-ai"
version = "0.1.0"
description = "Traffic Master AI Domain - Attack & Defense PoC-0"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "goorm-gongbang" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/traffic_master_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
